--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- SECTION - START -->
 		<section>
 			<p>
-				A concise guide for Canadians on how to recognize the signs of a tornado, improve safety by taking action and build a checklist for tasks and supplies.
+				A concise guide for Canadians on how to recognize the signs of a tornado, improve safety by taking action and build a checklist for tasks and supplies..
 			</p>
 		</section>
 		<!-- SECTION - END -->
