--- a/actions.html
+++ b/actions.html
@@ -4,6 +4,8 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Tornado North</title>
+        <meta name="description" content="A concise guide for Canadians on how to recognize the signs of a tornado, improve safety by taking action and build a checklist for tasks and supplies." />
+        <meta name="keywords" content="tornado, canada, recognize, safety, checklist" />
 
 		<link href="https://fonts.googleapis.com/css?family=Krub|Rajdhani" rel="stylesheet">
 		<link rel="stylesheet" href="assets/styles/style.css">
@@ -147,7 +149,7 @@
 								<div class="text">Don't</div>
 							</div>
 							<div class="description">
-								Ignore the changing conditions outside. Be aware of your activities and surroundings.  If you have to take shelter right away will you be able to?
+								Ignore the changing conditions outside. If you have to take shelter right away will you be able to?
 							</div>
 						</div>
 					</div>
