--- a/recognize.html
+++ b/recognize.html
@@ -4,6 +4,8 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Tornado North</title>
+        <meta name="description" content="A concise guide for Canadians on how to recognize the signs of a tornado, improve safety by taking action and build a checklist for tasks and supplies." />
+        <meta name="keywords" content="tornado, canada, recognize, safety, checklist" />
 
 		<link href="https://fonts.googleapis.com/css?family=Krub|Rajdhani" rel="stylesheet">
 		<link rel="stylesheet" href="assets/styles/style.css">
@@ -81,9 +83,10 @@
 						<p>
 							Follow a daily weather forecast on the internet, tv or radio.  When tornado like weather is predicted be vigilant and pay attention to the sky.
 						</p>
-
-						<img class="content-image" src="https://c1.staticflickr.com/5/4182/34307883925_ffb28f3eab.jpg" alt="A thunderstorm risk map" />
-
+						<div class="content-image">
+							<img src="https://c1.staticflickr.com/5/4182/34307883925_ffb28f3eab.jpg" alt="A thunderstorm risk map" />
+							<a href="https://www.theweathernetwork.com/ca?" target="_blank">Image: The Weather Network Canada</a>
+						</div>
 						<ul>
 							<li>
 								<a href="https://www.theweathernetwork.com/ca" target="_blank">The Weather Network</a>
@@ -143,9 +146,10 @@
 							Weather radar can give a clear indication of where thunderstorm cells are located in relation to you.  Knowing the
 							direction tornado like weather is headed can help you take action to protect yourself.
 						</p>
-
-						<img class="content-image" src="https://i.cbc.ca/1.3094209.1433003909!/fileImage/httpImage/image.png_gen/derivatives/16x9_780/radar.png" alt="A severe weather radar map" />
-
+						<div class="content-image">
+							<img src="https://i.cbc.ca/1.3094209.1433003909!/fileImage/httpImage/image.png_gen/derivatives/16x9_780/radar.png" alt="A severe weather radar map" />
+							<a href="https://www.theweathernetwork.com/ca?" target="_blank">Image: The Weather Network Canada</a>
+						</div>
 						<ul>
 							<li>
 								<a href="https://www.wunderground.com/wundermap?units=english&rad=1&rad.num=1&rad.spd=25&rad.opa=81&rad.type=00Q&rad.type2=&rad.smo=1&rad.stm=0&sat=0&stormreports=0&svr=0&pix=0&cams=0&tor=0&riv=0&wxsn=0&ski=0&tfk=0&mm=0&ndfd=0&fire=0&firewfas=0&extremes=0&hurrevac=0&sst=0&livesurge=0&femaflood=0&tsunami=0&seismicrisk=0&fault=0&fissures=0&fronts=0&dir=1&dir.mode=driving&hur=0" target="_blank">Wundermap</a>
@@ -177,10 +181,14 @@
 							If a wall cloud or a lowering of the base of a thunderstorm is observed it is a very good indication of a pending tornado, even
 							more so if the wall cloud is slowly rotating.
 						</p>
-
-						<img class="content-image" src="https://mrtwisterchaser.files.wordpress.com/2013/09/8196101137_0638bff9c7_b-2l-2.jpg" alt="A picture of a wall cloud" />
-
-						<iframe class="content-image" height="300" src="https://www.youtube.com/embed/TnfliFopaII?&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<div class="content-image">
+							<img src="https://mrtwisterchaser.files.wordpress.com/2013/09/8196101137_0638bff9c7_b-2l-2.jpg" alt="A picture of a wall cloud" />
+							<a href="https://mrtwisterchaser.wordpress.com/">Image: Mr. Twister</a>
+						</div>
+						<div class="content-image">
+							<iframe height="300" src="https://www.youtube.com/embed/TnfliFopaII?&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<a href="https://www.youtube.com/watch?v=TnfliFopaII" target="_blank">Youtube Video: Jonh Farley</a>
+						</div>
 					</div>
 				</div>
 				<!-- WALL CLOUD - END -->
@@ -201,8 +209,10 @@
 						<p>
 							Clouds associated with tornadic system will appear very dark.  Sunlight refracts off of hail giving the sky a green tint.
 						</p>
-
-						<img class="content-image" src="https://em.wattpad.com/08ac22884f18ef659227ebe804f6167fcb243e26/68747470733a2f2f732d6d656469612d63616368652d616b302e70696e696d672e636f6d2f6f726967696e616c732f30642f32612f62662f30643261626636363065393630303736336333613262626535663965313830342e6a7067?s=fit&h=360&w=360&q=80" alt="A green sky associated with tornadic weather" />
+						<div class="content-image">
+							<img src="https://em.wattpad.com/08ac22884f18ef659227ebe804f6167fcb243e26/68747470733a2f2f732d6d656469612d63616368652d616b302e70696e696d672e636f6d2f6f726967696e616c732f30642f32612f62662f30643261626636363065393630303736336333613262626535663965313830342e6a7067?s=fit&h=360&w=360&q=80" alt="A green sky associated with tornadic weather" />
+							<a href="https://www.jamessmart.com.au/stormchasing" target="_blank">Image: James Smart</a>
+						</div>
 					</div>
 				</div>
 				<!-- VERY DARK AND/OR GREEN SKY - END -->
@@ -215,17 +225,20 @@
 							<div>6</div>
 						</div>
 						<div class="text">
-							SHIFTING WINDS / QUIET
+							INTENSE WINDS / QUIET
 						</div>
 					</div>
 					<div class="description">
 						</p>
-							Intense wind shifts are associated with tornadoes. Trees are a good indicator of wind direction, if the direction of the wind changes suddenly the trees may give a good visual indication that a tornado is nearby.
+							Intense winds that may quickly shift are associated with tornadoes.
 						</p>
 						</p>
 							Sometimes just before a tornado strikes the wind may die dow and the aire will become very still, you will not hear wildlife sounds like birds singing.
 						</p>
-						<img class="content-image" src="https://i.ytimg.com/vi/4zw5rtRlj4I/maxresdefault.jpg" alt="Powerful wind in trees during tornado" />
+						<div class="content-image">
+							<iframe height="300" src="https://www.youtube.com/embed/v075d9Vfqcg?&mute=1&start=56" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<a href="https://www.youtube.com/watch?v=v075d9Vfqcg" target="_blank">Youtube Video: Brandon Ivey</a>
+						</div>
 					</div>
 				</div>
 				<!-- SHIFTING WINDS - END -->
@@ -245,8 +258,10 @@
 						<p>
 							A storm's updraft may create hail and is located immediately above a tornado.  Large hail is a sign that a tornado is imminent.
 						</p>
-
-						<img class="content-image" src="https://i.ytimg.com/vi/Myv7WlSnnbk/maxresdefault.jpg" alt="A picture of large hail preceeding a tornado" />
+						<div class="content-image">
+							<img src="https://i.ytimg.com/vi/Myv7WlSnnbk/maxresdefault.jpg" alt="A picture of large hail preceeding a tornado" />
+							<a href="https://www.youtube.com" target="_blank">Youtube Video: Thumbnail</a>
+						</div>
 					</div>
 				</div>
 				<!-- HAIL - END -->
@@ -266,10 +281,10 @@
 						<p>
 							An approaching cloud of debris may precede a tornados imminent strike, even if a funnel is not visible.
 						</p>
-
-						<img class="content-image" src="https://qph.fs.quoracdn.net/main-qimg-72e14173f1304cf929be7e25076daa24-c" alt="A picture of debris flying through a neighbourhood ahead of a tornado" />
-
-						<iframe class="content-image" height="300" src="https://www.youtube.com/embed/LtGAxRL5YNw?&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<div class="content-image">
+							<iframe height="300" src="https://www.youtube.com/embed/rCyi-vYtQoY?&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<a href="https://www.youtube.com/watch?v=rCyi-vYtQoY" target="_blank">Video: The Weather Network</a>
+						</div>
 					</div>
 				</div>
 				<!-- HAIL - END -->
@@ -289,8 +304,10 @@
 						<p>
 							A tornado creates a loud roar, many observers liken it to the sound of a freight train.
 						</p>
-
-						<iframe class="content-image" height="300" src="https://www.youtube.com/embed/OWTCaqVyOfs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<div class="content-image">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/OWTCaqVyOfs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<a href="https://www.youtube.com/watch?time_continue=1&v=OWTCaqVyOfs" target="_blank">YouTube Video: sonac04</a>
+						</div>
 					</div>
 				</div>
 				<!-- ROAR - END -->
