--- a/actions.html
+++ b/actions.html
@@ -131,7 +131,7 @@
 								<div class="text">Do</div>
 							</div>
 							<div class="description">
-								Watch for the warning signs of an impending tornado including; wall clouds, very dark or green skies, strong shifting winds, hail, debris and the "loud roar".
+								Keep an eye out for the warning signs of an impending tornado including; wall clouds, very dark or green skies, intense winds, hail, debris and the "loud roar".
 							</div>
 						</div>
 						<div class="dont">
@@ -149,7 +149,7 @@
 								<div class="text">Don't</div>
 							</div>
 							<div class="description">
-								Ignore the changing conditions outside. If you have to take shelter right away will you be able to?
+								Ignore the changing conditions outside. Be vigilant, if you have to take shelter immediatly where will you go?
 							</div>
 						</div>
 					</div>
@@ -231,7 +231,7 @@
 								<div class="text">Don't</div>
 							</div>
 							<div class="description">
-								Stay in a mobile home, most tornadoes can destroy mobile homes.  Flying debris can easily puncture the walls of mobile home.
+								Stay in a mobile home, most tornadoes can destroy mobile homes.  Flying debris can easily puncture the walls of a mobile home.
 							</div>
 						</div>
 					</div>
