--- a/prepare.html
+++ b/prepare.html
@@ -61,16 +61,12 @@
 
 			<h3>PREPARE</h3>
 			<p>
-				Build or purchase an emergency kit that will allow you to be self sufficient for up to 72 hours.
+				Create an emergency kit that will allow you to be self sufficient for up to 72 hours.
 			</p>
 
 
 			<!-- QUESTIONS - START -->
 			<div id="emergency-kit-questions" class="emergency-kit-questions">
-				<div class="title">
-					CREATE A 72 HOUR EMERGENCY KIT CHECKLIST
-				</div>			
-
 				<div class="m-form-input m-form-textbox">
 					<label>How many individuals are in your household that are not infants?:</label>
 					<input id="individuals" type="number" min="1" max="20" value=1 />
