--- a/actions.html
+++ b/actions.html
@@ -48,7 +48,7 @@
 		<section>
 
 			<!-- WIND -->
-			<svg version="1.1" id="wind" class="climacon climacon_wind" viewBox="15 15 70 70">
+			<svg version="1.1" id="wind" class="section-svg climacon climacon_wind" viewBox="15 15 70 70">
 				<g class="climacon_iconWrap climacon_iconWrap-wind">
 					<g class="climacon_wrapperComponent climacon_componentWrap-wind">
 						<path class="climacon_component climacon_component-stroke climacon_component-wind climacon_component-wind_curl"
