--- a/prepare.html
+++ b/prepare.html
@@ -48,7 +48,7 @@
 		<section>
 
 			<!-- CLOUD -->
-			<svg version="1.1" id="cloudFill" class="climacon climacon_cloudFill" viewBox="15 15 70 70">
+			<svg version="1.1" id="cloudFill" class="section-svg climacon climacon_cloudFill" viewBox="15 15 70 70">
 				<g class="climacon_iconWrap climacon_iconWrap-cloud">
 					<g class="climacon_componentWrap climacon_componentWrap_cloud">
 						<path class="climacon_component climacon_component-stroke climacon_component-stroke_cloud"
