--- a/recognize.html
+++ b/recognize.html
@@ -48,7 +48,7 @@
 		<section>
 
 			<!-- CLOUD / LIGHTNING --> 
-			<svg version="1.1" id="cloudLightning" class="climacon climacon_cloudLightning" viewBox="15 15 70 70">
+			<svg version="1.1" id="cloudLightning" class="section-svg climacon climacon_cloudLightning" viewBox="15 15 70 70">
 				<g class="climacon_iconWrap climacon_iconWrap-cloudLightning">
 					<g class="climacon_wrapperComponent climacon_wrapperComponent-lightning">
 						<polygon class="climacon_component climacon_component-stroke climacon_component-stroke_lightning"
