--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 		<!-- NAV -->
-		<nav class="nav-absolute-bottom">
+		<nav class="nav-index">
 			<a class="next" href="learn.html">
 				<svg version="1.1" viewBox="0 0 44.236 44.236">
 					<g>
