--- a/prepare.html
+++ b/prepare.html
@@ -378,16 +378,21 @@
 				});				
 
 				$("body").on("click", "#generate-new-emergency-kit", function() {
-
-// RESET VALUES
-
-
 					$("#emergency-kit-list").hide();
 					$("#emergency-kit-questions").show();
 				});				
 
             });
         </script>
+
+		<!-- ANALYTICS -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128206785-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-128206785-1');
+		</script>
 
 	</body>
 </html>
