--- a/actions.html
+++ b/actions.html
@@ -104,7 +104,7 @@
 								<div class="text">Don't</div>
 							</div>
 							<div class="description">
-								Don't ignore watches and warnings.  If a warning is issued that means a tornado is occuring, take shelter immediately.
+								Ignore watches and warnings.  If a warning is issued that means a tornado is occuring, take shelter immediately.
 							</div>
 						</div>
 					</div>
